website seems to be done

--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Single Portfolio Item Template for Bootstrap 3</title>
+    <title>Image Sharing Server</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-
-    <!-- Custom CSS for the '3 Col Portfolio' Template -->
-    <link href="css/portfolio-item.css" rel="stylesheet">
+    <link href="showcase/css/bootstrap.css" rel="stylesheet">
+    <link href="showcase/css/portfolio-item.css" rel="stylesheet">
 </head>
 
 <body>
@@ -27,15 +24,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://startbootstrap.com">Start Bootstrap</a>
+                <a class="navbar-brand" href="#">Image Sharing Website</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="https://github.com/hirusha-adi" target="_blank">Github</a></li>
+                    <li><a href="http://hirusha.xyz/My-Projects.html" target="_blank">Other Projects</a></li>
+                    <li><a href="http://hirusha.xyz/About.html" target="_blank">About</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container -->
@@ -45,8 +42,8 @@
 
         <div class="row">
 
-            <div class="col-lg-12">
-                <h1 class="page-header">Portfolio Item <small>Explain Your Work</small></h1>
+            <div class="col-lg-12" id="toptitle">
+                <h1 class="page-header">Image Sharing Website <small>made with Python3 and Flask</small></h1>
             </div>
 
         </div>
@@ -54,20 +51,24 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="http://placehold.it/750x500">
+                <img class="img-responsive" src="showcase/images/top.png">
             </div>
 
             <div class="col-md-4">
-                <h3>Project Description</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
-                    pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
-                    Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-                <h3>Project Details</h3>
+                <h3>
+                    About
+                </h3>
+                <p>
+                    A feature rich, highly customizable, simple, lightweight image sharing server. 
+                    (It is recomended + optimized to use 1:1 images, this will be updated in the future)
+                    All the images are easily managable inlcuding the order
+                </p>
+                <h3>Key Points</h3>
                 <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
+                    <li>Highly & Easily Customizable</li>
+                    <li>Simple</li>
+                    <li>Lightweight</li>
+                    <li>Fast</li>
                 </ul>
             </div>
 
@@ -76,23 +77,15 @@
         <div class="row">
 
             <div class="col-lg-12">
-                <h3 class="page-header">Related Projects</h3>
+                <h3 class="page-header">More Images</h3>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#"><img class="img-responsive portfolio-item" src="http://placehold.it/500x300"></a>
+                <a href="#toptitle"><img class="img-responsive portfolio-item" src="showcase/images/bottom.png"></a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#"><img class="img-responsive portfolio-item" src="http://placehold.it/500x300"></a>
-            </div>
-
-            <div class="col-sm-3 col-xs-6">
-                <a href="#"><img class="img-responsive portfolio-item" src="http://placehold.it/500x300"></a>
-            </div>
-
-            <div class="col-sm-3 col-xs-6">
-                <a href="#"><img class="img-responsive portfolio-item" src="http://placehold.it/500x300"></a>
+                <a href="#toptitle"><img class="img-responsive portfolio-item" src="showcase/images/pop.png"></a>
             </div>
 
         </div>
@@ -106,7 +99,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Company 2013</p>
+                    <p>Copyright © 2022 @hirusha-adi - All rights reserved</p>
                 </div>
             </div>
         </footer>
@@ -114,8 +107,8 @@
     </div><!-- /.container -->
 
     <!-- JavaScript -->
-    <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="showcase/js/jquery-1.10.2.js"></script>
+    <script src="showcase/js/bootstrap.js"></script>
 
 </body>
 
